# ERS-Tech-AV-KILLER

./: .gitignore  VERSION.json  auth.json  generate_auth_data.py  index.html  launcher.js  package-lock.json  package.json  patch_app.py  patch_version.py  remote_auth.json  remote_auth_decoded.json  update_context.py  update_dash.py
cloudflare-worker/: github-api-proxy.js  wrangler.toml
db/: brandDB.json  db_version.json  keywordDB.json  protectedApps.json  virusDB.json
electron/: main.cjs  preload.cjs
server/: index.cjs  package-lock.json  package.json
server/driver/: android_winusb.inf  install_driver.bat
src/: App.jsx  backend.js  index.css  main.jsx
src-tauri/: Cargo.toml  install-pre.nsh  patch.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: bg-tech.jfif
src/components/: ErrorBoundary.jsx  Sidebar.jsx
src/context/: VirusContext.jsx
src/data/: brandDB.js  keywordDB.js  protectedApps.js  virusDB.js
src/hooks/: useVirtualList.js
src/pages/: AppManager.jsx  Dashboard.jsx  FileManager.jsx  Help.jsx  Log.jsx  RemoteControl.jsx
src/utils/: shell.js
