[package]
name = "ers-tech-av-killer"
version = "1.6.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
base64 = "0.22"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-http = "2"
reqwest = { version = "0.13.4", features = ["json", "blocking"] }
sha2 = "0.11.0"
hex = "0.4.3"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
